Closed Bug 1338890 Opened 9 years ago Closed 9 years ago

PuppetWidget::NeedsPaint() should not use Preferences::GetBool but AddBoolVarCache

Categories

(Core :: Widget, defect)

36 Branch
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla54
Tracking Status
firefox54 --- fixed

People

(Reporter: smaug, Unassigned)

References

Details

Attachments

(1 file)

PuppetWidget::NeedsPaint() is called in rather hot code paths, so it shouldn't use GetBool but AddBoolVarCache.
Flags: needinfo?(gwright)
Attachment #8838659 - Flags: review?(bugs) → review+
Pushed by gwright@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/0d821ad73279 Cache our tab behaviour instead of requesting it each time on a hot path r=smaug
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla54
Flags: needinfo?(gw)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: