Bug 1338890 - Cache our tab behaviour instead of requesting it each time on a hot path r=smaug